--- a/src/main/resources/index.fxml
+++ b/src/main/resources/index.fxml
@@ -1,32 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.configController">
-   <children>
-      <BorderPane prefHeight="400.0" prefWidth="600.0">
-         <top>
-            <Pane prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
-         </top>
-         <left>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
-         </left>
-         <center>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ChoiceBox fx:id="dropDown" onMouseClicked="#setSelectedImage" prefWidth="150.0" />
-               </children></VBox>
-         </center>
-         <right>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
-         </right>
-         <bottom>
-            <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Pane prefHeight="200.0" prefWidth="200.0" />
-               </children>
-            </HBox>
-         </bottom>
-      </BorderPane>
-   </children>
-</AnchorPane>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
+            fx:controller="UI.indexController">
+    <top>
+        <Pane prefHeight="44.0" prefWidth="600.0" BorderPane.alignment="CENTER"/>
+    </top>
+    <left>
+        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER"/>
+    </left>
+    <center>
+        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label fx:id="errorDisplay" alignment="CENTER" prefHeight="51.0" prefWidth="400.0"
+                       text="Amazon AWS Instance Runner"/>
+                <Label alignment="CENTER" prefHeight="37.0" prefWidth="400.0"
+                       text="Please input your Amazon AWS Credentials"/>
+                <Label alignment="CENTER" prefHeight="16.0" prefWidth="402.0" text="AWS Access Key">
+                    <VBox.margin>
+                        <Insets bottom="10.0"/>
+                    </VBox.margin>
+                </Label>
+                <TextField fx:id="awsacc" alignment="CENTER" maxWidth="370.0" minWidth="370.0">
+                    <VBox.margin>
+                        <Insets left="15.0" right="15.0"/>
+                    </VBox.margin>
+                </TextField>
+                <Label alignment="CENTER" prefHeight="16.0" prefWidth="400.0" text="AWS Secret Access Key">
+                    <VBox.margin>
+                        <Insets bottom="10.0" top="10.0"/>
+                    </VBox.margin>
+                </Label>
+                <TextField fx:id="awssec" alignment="CENTER" layoutX="25.0" layoutY="124.0" maxWidth="370.0"
+                           minWidth="370.0" prefHeight="26.0" prefWidth="370.0">
+                    <VBox.margin>
+                        <Insets left="15.0" right="10.0"/>
+                    </VBox.margin>
+                </TextField>
+            </children>
+        </VBox>
+    </center>
+    <right>
+        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER"/>
+    </right>
+    <bottom>
+        <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <Pane prefHeight="200.0" prefWidth="200.0"/>
+                <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                    <children>
+                        <Button fx:id="next" layoutX="71.0" layoutY="60.0" mnemonicParsing="false"
+                                onAction="#changeScene"
+                                text="Next"/>
+                    </children>
+                </AnchorPane>
+                <Pane prefHeight="200.0" prefWidth="200.0"/>
+            </children>
+        </HBox>
+    </bottom>
+</BorderPane>
