--- a/src/main/resources/details.fxml
+++ b/src/main/resources/details.fxml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="UI.Details">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Details">
     <children>
         <BorderPane prefHeight="400.0" prefWidth="600.0">
             <center>
-                <ListView fx:id="instanceList" BorderPane.alignment="CENTER"/>
+                <ListView fx:id="instanceList" BorderPane.alignment="CENTER" />
             </center>
             <top>
                 <Pane prefHeight="63.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Label alignment="CENTER" layoutX="202.0" layoutY="32.0" prefHeight="16.0" prefWidth="198.0"
-                               text="Running Instances"/>
+                        <Label alignment="CENTER" layoutX="202.0" layoutY="32.0" prefHeight="16.0" prefWidth="198.0" text="Running Instances" />
                     </children>
                 </Pane>
             </top>
             <left>
-                <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+                <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
             </left>
             <right>
-                <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+                <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
             </right>
             <bottom>
                 <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Pane prefHeight="200.0" prefWidth="200.0"/>
-                        <VBox prefHeight="100.0" prefWidth="199.0"/>
+                        <Pane prefHeight="200.0" prefWidth="200.0" />
+                        <VBox prefHeight="100.0" prefWidth="199.0">
+                     <children>
+                        <Pane prefHeight="100.0" prefWidth="199.0">
+                           <children>
+                              <Button fx:id="newInstance" layoutX="50.0" layoutY="37.0" mnemonicParsing="false" onAction="#configLoader" text="New Instance" />
+                              <Button fx:id="newInstance1" layoutX="55.0" layoutY="1.0" mnemonicParsing="false" onAction="#refreshList" text="Refresh List" />
+                           </children>
+                        </Pane>
+                     </children></VBox>
                     </children>
                 </HBox>
             </bottom>
