--- a/src/main/resources/config.fxml
+++ b/src/main/resources/config.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="UI.configController">
+            xmlns="http://javafx.com/javafx/8.0.121" fx:controller="UI.ConfigController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0">
          <top>
