--- a/src/main/resources/details.fxml
+++ b/src/main/resources/details.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.Details">
     <children>
         <BorderPane prefHeight="400.0" prefWidth="600.0">
             <center>
-                <ListView fx:id="instanceList" BorderPane.alignment="CENTER" />
+                <ListView fx:id="instanceList" onMouseClicked="#getInstanceName" BorderPane.alignment="CENTER" />
             </center>
             <top>
                 <Pane prefHeight="63.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -33,6 +31,7 @@
                            <children>
                               <Button fx:id="newInstance" layoutX="50.0" layoutY="37.0" mnemonicParsing="false" onAction="#configLoader" text="New Instance" />
                               <Button fx:id="newInstance1" layoutX="55.0" layoutY="1.0" mnemonicParsing="false" onAction="#refreshList" text="Refresh List" />
+                              <Button layoutX="49.0" layoutY="73.0" mnemonicParsing="false" onAction="#stopInstance" text="Stop Instance" />
                            </children>
                         </Pane>
                      </children></VBox>
